--- a/static/clinic/css/style.css
+++ b/static/clinic/css/style.css
@@ -33,7 +33,7 @@ html {
 
 body {
      color: #666666;
-     font-size: 12px;
+     font-size: 14px;
      font-family: 'Josefin Sans', sans-serif;;
      line-height: 1.80857;
      font-weight: normal;
@@ -207,17 +207,17 @@ a {
 }
 
 .banner_bt{
-	width: 20%;
+	width: 55%;
 	float: left;
 }
 
 .read_bt {
-    width: 30%;
+    width: 100%;
     float: left;
     background-color: #ffffff;
     border-radius: 60px;
-    height: 60px;
-    font-size: 20pt;
+    height: 100px;
+    font-size: 25pt;
     border:0px;
 }
 
@@ -239,7 +239,7 @@ a {
 .about_section{
 	width: 100%;
 	float: left;
-	background-image: url(../clinic/images/about-img.jpg);
+	background-image: url(..clinic/images/about-img.jpg);
 	height: auto;
 	background-size: 100%;
 	background-repeat: no-repeat;
@@ -287,18 +287,18 @@ a {
 }
 
 .more_bt {
-    width: 30%;
+    width: 20%;
     float: right;
     background-color: #000;
     border-radius: 60px;
-    height: 60px;
+    height: 70px;
     font-size: 20pt;
     border: 0px;
     color: #fff;
 }
 
 .gallery_main{
-	width: 50%;
+	width: 100%;
 	float: left;
 	background-color:#f7941d;
 	height: auto;
@@ -309,7 +309,7 @@ a {
     color: #060401;
     text-align: right;
     line-height: 40px;
-    width: 86%;
+    width: 87%;
     float: right;
     margin-right: 0px;
 
@@ -386,12 +386,12 @@ a {
 }
 
 .dog_bt{
-    width: 30%;
+    width: 70%;
     float: left;
     background-color: #221e1f;
-    border-radius: 30px;
-    height: 20px;
-    font-size: 10pt;
+    border-radius: 60px;
+    height: 80px;
+    font-size: 25pt;
     border:0px;
     color: #ffffff;
     margin-top: 40px;
@@ -442,9 +442,9 @@ a {
 }
 
 .email_box{
-	width: 60%;
+	width: 100%;
 	float: left;
-	background-color: #5a3f23;
+	background-color: #ffffff;
 	border-radius: 20px;
 	height: auto;
     padding: 50px 20px;
@@ -460,7 +460,7 @@ a {
     padding: 20px;
 }
 
-.message-bt {
+.massage-bt {
     border: 1px solid #000;
     color: #000000;
     width: 100%;
@@ -487,6 +487,15 @@ button.main_bt {
 
 .form-group {
     margin-bottom: 2rem;
+}
+
+.touch_section_2{
+	width: 100%; 
+	float: left;
+	background-color: #f7941d;
+	padding-top: 40px;	
+	padding-bottom: 40px;
+	height: auto;
 }
 
 .email_text {
@@ -526,6 +535,19 @@ button.btn.btn-primary, button.btn.btn-primary:hover, button.btn.btn-primary:foc
 	float: left;
 	font-size: 40pt;
 	color: #ebebeb;
+}
+
+.subscribe_bt{
+	padding-right: 30px;
+	padding-left: 30px;
+	background-color: #000;
+	border-top-right-radius: 30px !important;
+	color: #fff;
+	padding-bottom: 10px; 
+	padding-top: 10px;
+	border-bottom-right-radius: 30px !important;
+	border: 0px; 
+	font-size: 17pt;
 }
 
 .email_bt {
@@ -715,8 +737,4 @@ button.btn.btn-primary, button.btn.btn-primary:hover, button.btn.btn-primary:foc
 	height: auto;
 	padding-top: 20px;
 	padding-bottom: 20px;
-}
-.footer-logo{
-    width: 100%; 
-	float: left;
 }
