--- a/clinic/templates/contact.html
+++ b/clinic/templates/contact.html
@@ -7,33 +7,42 @@
     	<div class="container">
     		<div class="row">
     			<div class="col-sm-12">
-				    <h1 class="get_taital"><strong><span style="color: #ffffff;">Contact</span>  Us</strong></h1>
+				    <h1 class="get_taital"><strong><span style="color: #ffffff;">Contact</span>  Us </strong></h1>
     			</div>
     		</div>
+        {% if name %}
+        <center>
+          <h2>Thanks {{ name }}!</h2>
+          <P>We received your email and will respond shortly... </P>
+        </center>
+        <br/><br/><br/>
+        {% else %}
     		<div class="email_box">
                     <div class="input_main">
                        <div class="container">
-                          <form action="/action_page.php">
+                          <form action="{% url 'contact'  %" method="POST">
+                            {%csrf_token%}
                             <div class="form-group">
-                              <input type="text" class="email-bt" placeholder="Name" name="Name">
+                              <input type="text" class="email-bt" placeholder="Your Name" name="name">
                             </div>
                             <div class="form-group">
-                              <input type="text" class="email-bt" placeholder="Your Phone Numbar" name="Name">
+                              <input type="text" class="email-bt" placeholder="Your Phone Number" name="phone-number">
                             </div>
                             <div class="form-group">
-                              <input type="text" class="email-bt" placeholder="Your Email" name="Email">
+                              <input type="text" class="email-bt" placeholder="Your Email" name="email">
                             </div>
                             
                             <div class="form-group">
-                                <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
+                                <textarea class="massage-bt" placeholder="Your Message" rows="5" id="comment" name="message"></textarea>
                             </div>
                           </form>   
                        </div> 
                        <div class="send_btn">
-                        <button type="button" class="main_bt"><a href="#">Send</a></button>
+                        <button type="submit" class="main_bt"> Send Message</button>
                        </div>                   
                     </div>
-    		</div>
+    		</div> 
+        {% endif %}
     	</div>
     </div>
     <div class="touch_section_2">
